# semantic-vvsu-2026

./: .gitignore  README.md  pyproject.toml
lectures/lecture_1/: lecture_1.pptx  notebook_1_examples.ipynb  notebook_2_examples.ipynb  notebook_3_vectorization.ipynb
tasks/task1/: README.md  example.ipynb
tasks/task1/data/: texts.txt
tasks/task2/: README.md  example.ipynb
tasks/task3/: README.md  example.ipynb
tasks/task3/data/: stocks_example.csv
