[project]
name = "semantic-vvsu-2026"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "python-pptx>=0.6.21",
    "tiktoken>=0.5.0",
    "gensim>=4.3.0",
    "natasha>=1.6.0",
    "spacy>=3.8.0",
    "pymorphy2>=0.9.0",
    "pymorphy3[fast]>=2.0.0",
    "dawg-python>=0.7.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tensorflow>=2.15.0,<2.17.0",
    "pandas>=2.0",
    "langchain>=0.1.0",
    "fastapi>=0.104.0",
    "python-telegram-bot>=20.0",
    "setuptools<70.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.7",
    "seaborn>=0.13.2",
]
